<resources>
    <string name="app_name">gBible</string>
    <string name="action_select">Перейти</string>
    <string name="action_search">Поиск</string>
    <string name="action_bookmarks">Закладки</string>
    <string name="action_history">История</string>
    <string name="action_setting">Настройки</string>
    <string name="exit_question">Выйти?</string>
    <string name="closes_app">Закрытие приложения..</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_ok">Ок</string>
    <string name="dialog_save">Сохранить</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="progress_dialog_title">Загрузка&#8230;</string>
    <string name="progress_dialog_message">Загрузка данных&#8230;</string>
    <string name="progress_dialog_download_chapter">Загрузка главы&#8230;</string>
    <string name="tnx_for_donate">Щиро дякую за ваш внесок в розвиток програми! З пов. Данило.</string>
    <string name="empty_et">Поле для поиска не заполенно!</string>
    <string name="no_connections">Нет соединения!</string>
    <string name="rus_translate_str">Русский Синодальный перевод</string>
    <string name="rus_modern_translate_str">Современный Русский перевод</string>
    <string name="ua_translate_str">Украинский перевод</string>
    <string name="eng_translate_str">King James Version</string>
    <string name="old_testament">Ветхий Завет</string>
    <string name="new_testament">Новый Завет</string>
    <string name="bitie_str">Бытие</string>
    <string name="bitie_str_small">Быт.</string>
    <string name="ishod_str">Исход</string>
    <string name="ishod_str_small">Исх.</string>
    <string name="levit_str">Левит</string>
    <string name="levit_str_small">Лев.</string>
    <string name="number_str">Числа</string>
    <string name="number_str_small">Чсл.</string>
    <string name="vtorozakonie_str">Второзаконие</string>
    <string name="vtorozakonie_str_small">Вторз.</string>
    <string name="iisus_navin_str">Иисус Навин</string>
    <string name="iisus_navin_str_small">ИисНав</string>
    <string name="sudii_str">Судьи</string>
    <string name="sudii_str_small">Суд</string>
    <string name="ruf_str">Руфь</string>
    <string name="one_carstw_str">1-я Царств</string>
    <string name="one_carstw_str_small">1 Цар</string>
    <string name="two_carstw_str">2-я Царств</string>
    <string name="two_carstw_str_small">2 Цар</string>
    <string name="three_carstw_str">3-я Царств</string>
    <string name="three_carstw_str_small">3 Цар</string>
    <string name="four_carstw_str">4-я Царств</string>
    <string name="four_carstw_str_small">4 Цар</string>
    <string name="one_paralipamenon_str">1-я Паралипаменон</string>
    <string name="one_paralipamenon_str_small">1 Парлп</string>
    <string name="two_paralipamenon_str">2-я Паралипаменон</string>
    <string name="two_paralipamenon_str_small">2 Парлп</string>
    <string name="ezdra_str">Ездра</string>
    <string name="neemia_str">Неемия</string>
    <string name="esfir_str">Есфирь</string>
    <string name="iov_str">Иов</string>
    <string name="psaltir_str">Псалтирь</string>
    <string name="pritchi_str">Притчи</string>
    <string name="ecclesiast_str">Екклесиаст</string>
    <string name="pesni_pesney_str">Песня песней</string>
    <string name="isaia_str">Исаия</string>
    <string name="ieremia_str">Иеремия</string>
    <string name="plach_ieremii_str">Плач Иеремии</string>
    <string name="iezekiil_str">Иезекииль</string>
    <string name="daniil_str">Даниил</string>
    <string name="osia_str">Осия</string>
    <string name="ioil_str">Иоиль</string>
    <string name="amos_str">Амос</string>
    <string name="avdiy_str">Авдий</string>
    <string name="iona_str">Иона</string>
    <string name="michey_str">Михей</string>
    <string name="naum_str">Наум</string>
    <string name="avvakum_str">Аввакум</string>
    <string name="sofonia_str">Софония</string>
    <string name="aggey_str">Аггей</string>
    <string name="zaharia_str">Захария</string>
    <string name="malahia_str">Малахия</string>
    <string name="matfey_str">От Матфея</string>
    <string name="mark_str">От Марка</string>
    <string name="luka_str">От Луки</string>
    <string name="ioanna_str">От Иоанна</string>
    <string name="deyania_str">Деяния</string>
    <string name="iakova_str">Иакова</string>
    <string name="one_petra_str">1-е Петра</string>
    <string name="two_petra_str">2-е Петра</string>
    <string name="one_ioanna_str">1-е Иоанна</string>
    <string name="two_ioanna_str">2-е Иоанна</string>
    <string name="three_ioanna_str">3-е Иоанна</string>
    <string name="iudy_str">Иуды</string>
    <string name="rimlan_str">К Римлянам</string>
    <string name="one_korinfyanam_str">1-е Коринфянам</string>
    <string name="two_korinfyanam_str">2-е Коринфянам</string>
    <string name="galatam_str">К Галатам</string>
    <string name="efesyanam_str">К Ефесянам</string>
    <string name="filipiycam_str">К Филиппийцам</string>
    <string name="kolosyanam_str">К Колоссянам</string>
    <string name="one_fessalonikiycam_str">1-е Фессалоникийцам</string>
    <string name="two_fessalonikiycam_str">2-е Фессалоникийцам</string>
    <string name="one_timofeu_str">1-е Тимофею</string>
    <string name="two_timofeu_str">2-е Тимофею</string>
    <string name="titu_str">К Титу</string>
    <string name="filimonu_str">К Филимону</string>
    <string name="evreyam_str">К Евреям</string>
    <string name="otkrovenie_str">Откровение</string>
    <string-array name="array_books">
        <item>Бытие</item>
        <item>Исход</item>
        <item>Левит</item>
        <item>Числа</item>
        <item>Второзаконие</item>
        <item>Иисус Навин</item>
        <item>Судьи</item>
        <item>Руфь</item>
        <item>1-я Царств</item>
        <item>2-я Царств</item>
        <item>3-я Царств</item>
        <item>4-я Царств</item>
        <item>1-я Паралипоминон</item>
        <item>2-я Паралипоминон</item>
        <item>Ездра</item>
        <item>Неемия</item>
        <item>Есфирь</item>
        <item>Иов</item>
        <item>Пластирь</item>
        <item>Притчи</item>
        <item>Екклесиаст</item>
        <item>Песня Песней</item>
        <item>Исаия</item>
        <item>Иеремия</item>
        <item>Плач Иеремии</item>
        <item>Иезекииль</item>
        <item>Даниил</item>
        <item>Осия</item>
        <item>Иоиль</item>
        <item>Амос</item>
        <item>Авдий</item>
        <item>Иона</item>
        <item>Михей</item>
        <item>Наум</item>
        <item>Аввакум</item>
        <item>Софония</item>
        <item>Аггей</item>
        <item>Захария</item>
        <item>Малахия</item>
        <item>От Матфея</item>
        <item>От Марка</item>
        <item>От Луки</item>
        <item>От Иоанна</item>
        <item>Деяния</item>
        <item>Иакова</item>
        <item>1-е Петра</item>
        <item>2-е Петра</item>
        <item>1-е Иоанна</item>
        <item>2-е Иоанна</item>
        <item>3-е Иоанна</item>
        <item>Иуды</item>
        <item>К Римлянам</item>
        <item>1-е Коринфянам</item>
        <item>2-е Коринфянам</item>
        <item>К Галатам</item>
        <item>К Ефесянам</item>
        <item>К Филиппийцам</item>
        <item>К Колоссянам</item>
        <item>1-е Фессалоникийцам</item>
        <item>2-е Фессалоникийцам</item>
        <item>1-е Тимофею</item>
        <item>2-е Тимофею</item>
        <item>К Титу</item>
        <item>К Филимону</item>
        <item>К Евреям</item>
        <item>Откровение</item>
    </string-array>
    <string name="exit_str">Выход</string>
    <string name="donate_title">Пожертвовать</string>
    <string name="donate_summary">Нуждаемся в материальной поддержке, здесь инфо счета в украинском банке ПриватБ</string>
    <string name="category_base">Общие</string>
    <string name="pref_default_translaters">def_translates</string>
    <string name="title_def_trans">Перевод по-умлч.</string>
    <string name="summary_def_trans">Устонавливает отображение текста определенного перевода.</string>
    <string name="dialogtitle_def_trans">Выбирете перевод по-умлч:</string>
    <string name="pref_mode_read">mode_read</string>
    <string name="title_mode_read">Режим День/Ночь</string>
    <string name="summary_mode_read">Устонавливает фон и цвет шрифта более приятный для глаз в зависимости от части дня.</string>
    <string name="dialogtitle_mode_read">Выбирите режим:</string>
    <string name="pref_use_vol_up_down_btn">use_vol_btn</string>
    <string name="title_use_vol_btn">Кнопки громкости</string>
    <string name="summary_use_vol_btn">Использование кнопок громкости для чтения, переключение между главами по конечному стиху.</string>
    <string name="pref_smooth_duration">smooth_duration_scrollint_list</string>
    <string name="title_smooth_scroll">Скорость скрола глав</string>
    <string name="summary_smooth_scroll">Скорость чтения стихов в главе под упавлением клавишь громкости.</string>
    <string name="category_design">Оформление</string>
    <string name="pref_size_text_poem">size_text_poem</string>
    <string name="title_size_text_poem">Размер шрифта стихов</string>
    <string name="summary_size_text_poem">Устанавливает размер текста на странице со стихами.</string>
    <string name="pref_pos_down_panel">position_control_panel</string>
    <string name="title_pos_down_panel">Положение ПУ</string>
    <string name="summary_pos_down_panel">Установка положения панели управления в горизонтальной ориентации устройства.</string>
    <string name="dialog_title_pos_down_panel">Выбирите положение:</string>
    <string name="pref_background_poem">pref_background_on_poem_fragment</string>
    <string name="title_background_on_poem_fragment">Цвет фона стихов</string>
    <string name="summary_background_on_poem_fragment">Выбирите цвет который в дневном режиме, будет на фоне страници чтения стихов.</string>
    <string name="pref_color_text">pref_color_poem</string>
    <string name="title_color_text_dialog">Цвет текста</string>
    <string name="summary_select_text_color">Выбирите цвет для текста стихов.</string>
    <string name="pref_backg_control_panel">pref_baground_control_panel</string>
    <string name="title_control_panel_pref">Фон ПУ</string>
    <string name="summary_control_panel_pref">Установите фон для нижней панели управления</string>
    <string name="action_title_clear_history">Очистка</string>
    <string name="dialog_add_to_bookmarks">Добавить в закладки</string>
    <string name="dialog_copy_to_clicpboard">Копировать содержимое</string>
    <string name="dialog_share">Поделиться</string>
    <string name="dialog_compare">Сравнить</string>
    <string name="dialog_enter_name_plan">* Введите заголовок</string>
    <string name="dialog_enter_sub_description">Под заголовок</string>
    <string name="data_time">Дата создания:</string>
    <string name="text_str">Текст</string>
    <string name="link_str">Ссылка</string>
    <string name="bold_text">Жирный шрифт</string>
    <string name="quote_poem">Цитировать</string>
    <string name="card_info_title">Реквизиты для пожертвований</string>
    <string name="copy_to_clip_board_str">Копировать в буфер</string>
    <string name="donate_info">ФИО: Павенко Даниил Евгеньевич\n\nМФО банка: 305299\nКОД ОКПО получателя: 14360570\nКОД ОКПО банка: 14360570\nИНН получателя: 3484203653\n\n№ карты: 4731185505692514</string>
    <string name="title_activity_read_for_every_day">Чтение на каждый день</string>
    <string name="link_status_readed">Прочтено</string>
    <string name="link_status_no_readed">Не прочитано</string>
    <string name="title_activity_instruction_update">Инструкции &amp; Обновления</string>
    <string name="summary_instr_updt_activity">писание последних обновлений, а также описание некоторих функций и возможностей.</string>
</resources>