<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/action_add_to_bookmarks"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/dialog_add_to_bookmarks"/>
    
    <item 
        android:id="@+id/action_copy_to_clipboard"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/dialog_copy_to_clicpboard"/>
    
    <item 
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/dialog_share"/>
    
    <item 
        android:id="@+id/action_compare"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/dialog_compare"/>

</menu>
