<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item 
        android:id="@+id/action_clear_history"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_title_clear_history"/>
    
    <item 
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/exit"
        android:title="@string/exit_str"/>
    
    <item
        android:id="@+id/action_setting_app"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/setting_ico42"
        android:title="@string/action_setting"/>

</menu>
