<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ua.maker.gbible="http://schemas.android.com/apk/res-auto" >

    <!--
    <item 
        android:id="@+id/action_previous_chapter"
        android:orderInCategory="100"
        ua.maker.gbible:showAsAction="ifRoom|withText"
        android:title="@string/previous_chapter_symbol"
        android:icon="@drawable/pointer_previous"/>
    <item 
        android:id="@+id/action_next_chapter"
        android:orderInCategory="100"
        ua.maker.gbible:showAsAction="ifRoom|withText"
        android:title="@string/next_chapter_symbol"
        android:icon="@drawable/pointer_next"/>
    -->
    <item
        android:id="@+id/action_read_for_every_day"
        android:icon="@android:drawable/ic_menu_agenda"
        android:orderInCategory="100"
        ua.maker.gbible:showAsAction="ifRoom|withText"
        android:title="@string/title_activity_read_for_every_day"/>
    <item
        android:id="@+id/action_setting_app"
        android:icon="@drawable/setting_ico42"
        android:orderInCategory="100"
        ua.maker.gbible:showAsAction="ifRoom|withText"
        android:title="@string/action_setting"/>
    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/exit"
        android:orderInCategory="100"
        ua.maker.gbible:showAsAction="collapseActionView|ifRoom"
        android:title="@string/exit_str"/>

</menu>