<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/text_str" />

        <RadioButton
            android:id="@+id/rb_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/link_str" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_add_text_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/et_text_to_new_item_plan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />

                <CheckBox
                    android:id="@+id/cb_set_text_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bold_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_add_link_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <Spinner
                        android:id="@+id/spinner_books"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/spinner_chapter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.7" />

                    <Spinner
                        android:id="@+id/spinner_poem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.7" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.99"
                        android:text="-"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Spinner
                        android:id="@+id/spinner_to_poem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.7" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/cb_quote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quote_poem" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
